# xeno-mcp

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
lua/: loader.lua.tpl  logger.lua.tpl  scanner.lua.tpl  spy.lua.tpl
mcp-bridge/: package-lock.json  package.json
mcp-bridge/src/: api.ts  index.ts  instructions.ts  resources.ts  scriptblox.ts  tools.ts
src/: errors.rs  loader.rs  logger.rs  main.rs  models.rs  scanner.rs  spy.rs  xeno.rs
src/routes/: health.rs  internal.rs  logs.rs  mod.rs  scanner.rs  spy.rs  xeno.rs
storage/places/123974602339071/: manifest.json  properties.json  remotes.json  scripts.json  scripts_full.json  services.json
