[package]
name = "xeno-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
hmac-sha256 = "1"
hex = "0.4"
